# andamentum

./: .actrc  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONSTITUTION.md  CONTRIBUTING.md  LICENSE  README.md  RESPONSIBLE_USE.md  REVIEW_LOG.md  main.py  pyproject.toml  report.html  report_new.html  smoke_gemma26.md  smoke_gemma31.md  smoke_gpt-5.4-mini.md  smoke_gpt-5.4-mini_v2.md  smoke_gpt-5.4-mini_v3.md  smoke_gptoss.md  smoke_gptoss_v2.md  smoke_gptoss_v3.md
.github/workflows/: test.yml
benchmarks/chunker/: README.md  __init__.py  cli.py  conftest.py  loader.py  metrics.py  report.py  runner.py  test_benchmark.py  types.py
benchmarks/chunker/app/: __main__.py  main.py
benchmarks/chunker/cases/: academic_short.input.md  academic_short.truth.json  code_with_docstrings.input.py  code_with_docstrings.truth.json  qa_transcript.input.md  qa_transcript.truth.json  web_with_junk.input.md  web_with_junk.truth.json
benchmarks/chunker/tests/: test_loader.py  test_metrics.py  test_report.py  test_runner.py  test_types.py
benchmarks/epistemic/: .gitignore  conftest.py  run_all.py
benchmarks/epistemic/adversarial_search/: eval.py
benchmarks/epistemic/dispatch_quality/: README.md  __init__.py  fixtures.py  harness.py  run.py  test_harness.py
benchmarks/epistemic/evidence_quality/: eval.py
benchmarks/epistemic/extract_evidence/: eval.py
benchmarks/epistemic/propose_claims/: eval.py
benchmarks/epistemic/scrutinise_claim/: eval.py
benchmarks/epistemic/write_answer/: eval.py
benchmarks/figures/: showcase.py
benchmarks/forge/: .gitignore  README.md  __init__.py  cases.py  cli.py  conftest.py  golden.py  report.py  runner.py  shape.py  test_benchmark.py  test_golden_offline.py  test_runner_offline.py  test_shape.py  types.py
benchmarks/whetstone/: .gitignore  README.md  __init__.py  adjudicate.py  arms.py  cli.py  loader.py  report.py  seeds.example.json  seeds.json  types.py  visualize.py
benchmarks/whetstone/runs_v2/: arxiv_1406.2661_v1.arms.adj.json  arxiv_1406.2661_v1.arms.json  arxiv_1412.6980_v1.arms.adj.json  arxiv_1412.6980_v1.arms.json  arxiv_1512.03385_v1.arms.adj.json  arxiv_1512.03385_v1.arms.json  arxiv_1706.03762_v1.arms.adj.json  arxiv_1706.03762_v1.arms.json  arxiv_1810.04805_v1.arms.adj.json  arxiv_1810.04805_v1.arms.json  report.html  worksheet.md  worksheet_key.json
benchmarks/whetstone/tests/: test_blinding.py  test_report_and_worksheet.py  test_visualize.py
doc/: index.md
doc/epistemic/: EPISTEMIC_SYSTEM.md  epistemic_flow.html  epistemic_routing_explorer.html  overview.md
docs/: api-surface.md  architecture.md  confidence_analysis.md  forge-architecture.html  index.md  local-ci.md  tier0_design.md  tier1_design.md  tier_live_benchmark.py  web_search_provider_investigation.md
docs/agentic-systems/: DIALECT.md  agentic-dialect-reference.html  agentic-dialect.html
docs/deep_research/: overview.md
docs/design/: CLAUDE.md  DESIGN.md  README.md  alignment-audit.html  brain-mockup.html  browse-mockup.html  index.html  showcase.html
docs/design/snippets/: README.md  action-row.html  artefacts.html  avatar.html  badge.html  button.html  callout.html  card.html  chat.html  checkbox.html  chip.html  empty-state.html  footnote.html  input.html  kbd.html  menu.html  modal.html  pagination.html  progress.html  settings.html  sidebar.html  source-row.html  stepper.html  sub-tabs.html  tabs.html  tag.html  task-row.html  timeline.html  toast.html  toggle.html  toollog.html  tooltip.html  typeset-document.html  validation.html
docs/diagnostics/: 2026-05-03-stage-probes.md
docs/document_store/: overview.md
docs/epistemic/: epistemic_flow.html  multiphrasing_confidence_spec.md  overview.md
docs/plans/: 2026-05-16-responsible-release.md  2026-05-21-whetstone-benchmark-prd.md  2026-05-21-whetstone-claim-substantiation-prd.md  2026-05-21-whetstone-consolidate-prd.md  2026-05-21-whetstone-review-fixes-design.md  2026-05-21-whetstone-review-fixes-impl.md  2026-05-21-whetstone-review-fixes-prd.md  2026-05-22-whetstone-v3-whole-doc-specs.md  2026-05-24-string-match-consolidation.md  2026-05-24-whetstone-v3-layer1-tools-pid.md  2026-05-24-whetstone-v3-prompt-quality.md  2026-05-24-whetstone-v3-self-correction.md  2026-05-25-whetstone-v3-consolidation-MASTER-PLAN.md  2026-05-25-whetstone-v3-consolidation-prd.md  2026-05-25-whetstone-v3-panel-mini-prd.md  2026-05-26-whetstone-v3-consolidation-PR-SUMMARY.md
docs/plans/forge-functions/: 00-READ-ME-HANDOFF.md  A-WHY-FUNCTIONS.md  B-DIALECT-ALIGNMENT.md  C-STORE-PRD.md  COMPLETION-PLAN.md  D-SELF-CORRECTION-PRD.md  TIER2-PUSH-PLAN.md
docs/results/: dev30_v9.md
docs/superpowers/freezes/: 2026-05-03-evening-freeze-sheet.md  2026-05-03-freeze-sheet.md  2026-05-04-freeze-sheet.md
docs/superpowers/plans/: 2026-04-16-typeset-module.md  2026-04-19-core-module.md  2026-04-19-epistemic-scheduling-and-integration.md  2026-04-19-graph-scheduler-migration.md  2026-04-20-clean-architecture.md  2026-04-21-fix-silent-fallbacks-epistemic.md  2026-04-23-whetstone-consistency-and-checklist.md  2026-04-25-scribe-module.md  2026-04-28-search-cycle-redesign.md  2026-04-28-whetstone-v2-feature-parity-and-beyond.md  2026-05-01-epistemic-efficiency.md  2026-05-01-graph-node-contracts.md  2026-05-02-lazy-escalation.md  2026-05-03-stage-runners-phase-0.md  2026-05-03-stage-runners.md  2026-05-04-confidence-honest-aggregation.md  2026-05-04-document-store-chunker-swap.md  2026-05-04-entry-point-consolidation.md  2026-05-05-k8-bug1-provider-tournament.md  2026-05-05-threshold-followups.md  2026-05-12-description-driven-provider-dispatch.md  2026-05-14-audit-report-prd.md  2026-05-14-audit-report-v2-implementation.md
docs/superpowers/specs/: 2026-04-23-whetstone-consistency-and-checklist-design.md
docs/whetstone/lenses/: strunk.md
examples/deep_research/: quickstart.py
examples/epistemic/: quickstart.py
scripts/: ci-local.sh  docx_comment_evidence.py  docx_edit_anchor_check.py
src/andamentum/: __init__.py
src/andamentum/agentic_dialect/: CLAUDE.md  DIALECT.md  __init__.py  _laws.py  _roles.py  checks.py  (+2 more)
(+820 files in other folders)
