[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "andamentum"
version = "0.1.0"
description = "Composable agentic systems for scientific automation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Timo Lassmann" },
]
dependencies = [
    # Flat union of epistemic, deep_research, and document_store deps.
    # Cross-package deps collapsed (one distribution). Stricter version wins.
    "pydantic>=2.0.0",           # epistemic, deep-research, document-store
    "aiosqlite>=0.19.0",         # document-store
    "sqlite-vec>=0.1.6",         # document-store (vec0 virtual tables for embeddings)
    "numpy>=1.24.0",             # document-store
    "scipy>=1.10.0",             # document-store
    "rank-bm25>=0.2.2",          # document-store, epistemic[search]
    "httpx>=0.28.1",             # deep-research, epistemic[http], document-store[embeddings] (stricter: 0.28.1 > 0.24.0)
    "trafilatura>=2.0.0",        # deep-research
    "docling>=2.54.0",           # deep-research
    "scikit-learn>=1.3",         # epistemic
    "pydantic-ai>=1.84.0",        # epistemic[llm], deep-research[llm], document-store[llm] (stricter: 1.0.1 > 1.0.0)
    "pydantic-graph>=0.1.0",     # deep-research[llm]
    "python-dotenv>=1.0.0",      # epistemic[llm], deep-research[llm]
    "rich>=13.0.0",              # epistemic[llm]
    "markdown>=3.5.0",           # typeset
    "python-docx>=1.2.0",        # whetstone (docx track changes)
    "lxml>=5.0.0",               # whetstone (docx xml manipulation)
    "matplotlib>=3.8",           # figures (publication-quality plotting engine)
    "rapidfuzz>=3.0",            # chunker (fuzzy anchor matching)
]

[project.scripts]
andamentum-epistemic    = "andamentum.epistemic.cli:main"
andamentum-research     = "andamentum.deep_research.cli:main"
andamentum-whetstone    = "andamentum.whetstone.v2.cli:main"
andamentum-whetstone-v1 = "andamentum.whetstone.cli:main"
andamentum-scribe       = "andamentum.scribe.cli:main"
andamentum-figures      = "andamentum.figures.cli:main"
andamentum-chunker      = "andamentum.chunker.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pyright>=1.1.0",
    "ruff>=0.1.0",
    "fastapi>=0.109",
    "uvicorn>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/andamentum"]

[tool.hatch.build.targets.sdist]
include = [
    "src/andamentum",
    "doc",
    "examples",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pyright]
include = ["src"]
pythonVersion = "3.13"

[tool.pytest.ini_options]
testpaths = ["src/andamentum"]
asyncio_mode = "auto"
# Gated markers: tests tagged with these are NOT run by default.
# Invoke explicitly: `uv run pytest -m benchmark` or `uv run pytest -m ollama`.
markers = [
    "ollama: test requires a live Ollama embedding backend",
    "benchmark: long-running accuracy or performance benchmark",
]
# Exclude gated tests from default runs. Explicitly selecting a marker
# overrides this.
addopts = "-m 'not ollama and not benchmark'"
