[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "andamentum"
version = "0.3.0"
description = "Composable agentic systems for scientific automation."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Timo Lassmann" },
]
keywords = [
    "agents",
    "llm",
    "epistemology",
    "deep-research",
    "knowledge-base",
    "manuscript-review",
    "scientific-computing",
    "rag",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
# Dependency constraints carry both a lower bound (oldest version we've
# tested against) AND an upper bound capping the next major version so
# a downstream resolver can't silently pull in a new major that breaks
# the API. Upgrade the upper bound deliberately when bumping a major.
dependencies = [
    "pydantic>=2.0.0,<3",            # epistemic, deep-research, document-store
    "aiosqlite>=0.19.0,<1",          # document-store
    "sqlite-vec>=0.1.6,<0.2",        # pre-1.0 ABI: pin minor too
    "numpy>=1.24.0,<3",              # document-store
    "scipy>=1.10.0,<2",              # document-store
    "rank-bm25>=0.2.2,<1",           # document-store, epistemic[search]
    "httpx>=0.28.1,<1",              # deep-research, document-store
    "docling>=2.54.0,<3",            # harvest (PDF / DOCX / PPTX / HTML fallback)
    # torch/torchvision are docling's (transitive) ML backend. Declared here
    # only so the CPU-index pin in [tool.uv.sources] binds — uv applies sources
    # to declared deps, not transitive ones. Ranges stay open; docling narrows.
    "torch>=2.2,<3",
    "torchvision>=0.17,<1",
    "scikit-learn>=1.3,<2",          # epistemic
    "pydantic-ai>=1.84.0,<2",        # whetstone / epistemic / deep-research
    "pydantic-graph>=0.1.0,<2",      # graph state machines (whetstone, deep-research)
    "python-dotenv>=1.0.0,<2",       # epistemic / deep-research demos
    "rich>=13.0.0,<15",              # epistemic / whetstone CLI rendering
    "markdown>=3.5.0,<4",            # typeset
    "python-docx>=1.2.0,<2",         # whetstone docx track-changes
    "lxml>=5.0.0,<7",                # whetstone docx XML manipulation
    "matplotlib>=3.8,<4",            # figures
    "rapidfuzz>=3.0,<4",             # chunker fuzzy anchor matching
    "textstat>=0.7.4,<1",            # proofread deterministic readability
]

[project.urls]
Homepage      = "https://github.com/TimoLassmann/andamentum"
Repository    = "https://github.com/TimoLassmann/andamentum"
Documentation = "https://github.com/TimoLassmann/andamentum/tree/main/docs"
Changelog     = "https://github.com/TimoLassmann/andamentum/blob/main/CHANGELOG.md"
Issues        = "https://github.com/TimoLassmann/andamentum/issues"

[project.scripts]
andamentum-epistemic    = "andamentum.epistemic.cli:main"
andamentum-research     = "andamentum.deep_research.cli:main"
andamentum-whetstone    = "andamentum.whetstone.cli:main"
andamentum-scribe       = "andamentum.scribe.cli:main"
andamentum-figures      = "andamentum.figures.cli:main"
andamentum-chunker      = "andamentum.chunker.cli:main"
andamentum-harvest      = "andamentum.harvest.cli:main"
andamentum-typeset      = "andamentum.typeset.cli:main"
andamentum-vision-critique = "andamentum.vision_critique.cli:main"
andamentum-proofread    = "andamentum.proofread.cli:main"

[project.optional-dependencies]
# trafilatura (Apache-2.0, MIT-compatible) is kept out of the default
# install to keep the dependency surface small, not for licensing reasons:
# the harvest backend falls back to docling automatically when trafilatura
# is not installed. Install `andamentum[html-articles]` for best-in-class
# HTML article extraction.
html-articles = [
    "trafilatura>=2.0.0,<3",
]
# PDF rendering in andamentum.typeset (render_pdf, the typeset CLI's .pdf
# output) needs WeasyPrint (BSD-3-Clause, MIT-compatible). It also requires
# system libraries (pango, cairo) — see the render_pdf error message. Kept
# optional because most rendering targets HTML/.docx and WeasyPrint's native
# deps are heavy. Install `andamentum[pdf]` to enable it.
pdf = [
    "weasyprint>=60,<67",
]
dev = [
    "pytest>=8.0.0,<9",
    "pytest-asyncio>=0.24.0,<1",
    "pyright>=1.1.0,<2",
    "ruff>=0.1.0,<1",
    "fastapi>=0.109,<1",
    "uvicorn>=0.27,<1",
    "trafilatura>=2.0.0,<3",   # dev install gets every backend for full-suite tests
]

[tool.uv]
# Supply-chain cooldown: at resolve time (uv lock / add / upgrade) ignore
# any package version uploaded in the last 28 days. Rolling window —
# re-evaluated on every resolve. Does NOT affect `uv sync` from the
# existing lockfile.
#
# Why: blocks freshly-published malicious releases (typosquats,
# hijacked maintainers, stolen publish tokens) from being pulled into
# the dependency tree before the community has time to flag them. If
# bleeding-edge versions aren't required, the lag costs nothing.
#
# Active enforcement: the `uv.lock` next to this file is the actual
# pin (with hashes); the >= ranges above are resolver inputs only.
# CI / containers / agents should run `uv sync --locked` (or set
# `UV_LOCKED=1`) so the lockfile cannot drift silently.
exclude-newer = "28 days"

# CPU-only PyTorch. docling (a core dep) pulls torch/torchvision for its
# layout + table models, and the default PyPI torch *Linux* wheel hard-declares
# the full NVIDIA CUDA runtime (nvidia-cublas, cudnn, nccl, cusparse, …) —
# multiple GB downloaded even on GPU-less machines (CI, containers), and the
# download stalls on the ~400 MB CUDA wheels. docling only needs CPU inference,
# so resolve torch from PyTorch's CPU index instead.
#
# This drops the entire nvidia-* stack on Linux/Windows; macOS is unaffected in
# substance (its wheels are CPU/MPS-only either way — MPS/Metal still works).
# A consumer who genuinely wants CUDA torch overrides the source downstream.
# torch/torchvision must be listed in [project.dependencies] above for this to
# bind: uv applies sources to declared deps, not purely transitive ones.
[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["src/andamentum"]
# Tests + their fixtures are not part of the importable runtime surface;
# keep them out of the installed wheel (they still ship in the sdist).
exclude = [
    "**/tests",
    "**/tests/**",
    "**/conftest.py",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/andamentum",
    "docs",
    "examples",
    "README.md",
    "LICENSE",
    "RESPONSIBLE_USE.md",
    "CHANGELOG.md",
    "pyproject.toml",
]
exclude = [
    # Internal plans / freezes / working notes — not for the public tarball.
    "docs/.internal/**",
]

[tool.pyright]
include = ["src"]
pythonVersion = "3.13"

[tool.pytest.ini_options]
testpaths = ["src/andamentum"]
asyncio_mode = "auto"
# Gated markers: tests tagged with these are NOT run by default.
# Invoke explicitly: `uv run pytest -m benchmark`, `uv run pytest -m ollama`,
# or `uv run pytest -m cloud`.
markers = [
    "ollama: test requires a live Ollama embedding backend",
    "benchmark: long-running accuracy or performance benchmark",
    "cloud: test calls a real cloud LLM (costs tokens, needs API key)",
    "live_provider: test calls a live evidence provider API (PubMed, OpenAlex, etc.) — needs internet, no auth typically required",
]
# Exclude gated tests from default runs. Explicitly selecting a marker
# overrides this.
addopts = "-m 'not ollama and not benchmark and not cloud and not live_provider'"
